--- a/style/grey.css
+++ b/style/grey.css
@@ -1,35 +1,35 @@
-.gray_one {
+.gray_1 {
     color: rgb(10%, 10%, 10%);
 }
 
-.gray_two {
+.gray_2 {
     color: rgb(20%, 20%, 20%);
 }
 
-.gray_three {
+.gray_3 {
     color: rgb(30%, 30%, 30%);
 }
 
-.gray_four {
+.gray_4 {
     color: rgb(40%, 40%, 40%);
 }
 
-.gray_five {
+.gray_5 {
     color: rgb(50%, 50%, 50%);
 }
 
-.gray_six {
+.gray_6 {
     color: rgb(60%, 60%, 60%);
 }
 
-.gray_seven {
+.gray_7 {
     color: rgb(70%, 70%, 70%);
 }
 
-.gray_eight {
+.gray_8 {
     color: rgb(80%, 80%, 80%);
 }
 
-.gray_nine {
+.gray_9 {
     color: rgb(90%, 90%, 90%);
 }
